5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1649_2711.log
== SUBMITION (2019-04-15 22:53:28) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
val=(qtdtic * valtic) + (qtdbus * valbus)
if val>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.150675
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:29) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
val=(qtdtic * valtic) + (qtdbus * valbus)
if val>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:53:38) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.16891
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:53:39) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:54:00) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.156752
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:54:22) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:54:49) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.160764
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:55:26) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE"
-- EXECUTION TIME:
0.181669
-- ERROR:
  File "/home/codebench/codes/1649/2711/main.py", line 11
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:55:31) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.1653
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:55:33) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.200037
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:55:34) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x=(qtdtic * valtic) + (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:56:34) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x= val -(qtdtic * valtic) - (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:56:45) 
-- CODE:
val=float(input("valor:"))
qtdtic=int(input("quantidade de tickets:"))
valtic=float(input("valor do ticket:"))
qtdbus=int(input("quantidade de passes:"))
valbus=float(input("valor do passe:"))
x= val -(qtdtic * valtic) - (qtdbus * valbus)
if x>0:
	print("SUFICIENTE")
else:
	print("INSUFICIENTE")
-- EXECUTION TIME:
0.145843
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
